MVC 기본 게시판

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 <p>Src -> Main -> resources 에 제작한 정적인 컨텐츠이자 첫화면으로 보여지는 index.html 입니다.</p>
-
+<p>list,view 로 이동해 게시판의 기본적인 기능에 대해 볼 수 있습니다.</p>
 </body>
 </html>
